# mwk-logger

./: LICENSE.txt  README.md  mwk_logger.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish_to_pypi.yml
mwk_logger/: __init__.py  decorators.py  logger.py
src/mwk_logger/: __init__.py  decorators.py  logger.py  sys_handler.py
tests/: test_console.py  test_logging.py
