[build-system]
requires = ["setuptools>=61.0.0", "colorama"]
build-backend = "setuptools.build_meta"

[project]
name = "mwk_logger"
dynamic = ["version"]
authors = [
  { name="MWK", email="mjwk1020@gmail.com" },
]
description = "Custom logger with colors on terminal and some useful decorators."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "mwk_logger.__version__"}

[project.urls]
"Homepage" = "ttps://github.com/MWKSolution/mwk-logger"